--- a/experimental/configs/onboarding_libs.yaml
+++ b/experimental/configs/onboarding_libs.yaml
@@ -5,13 +5,23 @@ description: This template downloads additional packages required to provision a
 parameters:
   cloudlibs_tag:
     type: string
-    label: f5 CloudLibs Tag
+    label: f5-cloud-libs Tag
     description: Tag that determines version of cloudlibs to use. If specified, ensure that hashes are updated for verifyHash
-    default: v3.3.0
+    default: v3.5.0
   cloudlibs_url_override:
     type: string
-    label: f5 cloud-libs URL Override
-    description: Alternate URL for f5-cloud-libs package. If not specified, the default GitHub location for f5-cloud-libs will be used. If version is different from default f5_cloudlibs_tag, ensure that hashes are valid by either updating scripts/verifyHash or by providing a f5_cloudlibs_verify_hash_url_override value. 
+    label: f5-cloud-libs URL Override
+    description: Alternate URL for f5-cloud-libs package. If not specified, the default GitHub location for f5-cloud-libs will be used. If version is different from default f5_cloudlibs_tag, ensure that hashes are valid by updating scripts/verifyHash.
+    default: None
+  cloudlibs_os_tag:
+    type: string
+    label: f5-cloud-libs-openstack tag
+    description: Tag that determines version of f5-cloudlibs-openstack to use. If specified, ensure that hashes are updated for verifyHash.
+    default: v1.0.0
+  cloudlibs_os_url_override:
+    type: string
+    label: f5-cloud-libs-openstack URL Override
+    description: Alternate URL for f5-cloud-libs-openstack package. If not specified, the default GitHub location for f5-cloud-libs will be used. If version is different from default f5_cloudlibs_os_tag, ensure that hashes are valid by updating scripts/verifyHash .
     default: None
 resources:
   onboarding_libs:
@@ -21,19 +31,30 @@ resources:
       config:
         str_replace:
           params:
-            __cloudlibstag__: { get_param: cloudlibs_tag }
+            __cloudlibs_tag__: { get_param: cloudlibs_tag }
             __cloudlibs_url_override__: { get_param: cloudlibs_url_override }
+            __cloudlibs_os_tag__: { get_param: cloudlibs_os_tag }
+            __cloudlibs_os_url_override__: { get_param: cloudlibs_os_url_override }
           template: |
             #!/bin/bash
             cloudlibsUrlOverride="__cloudlibs_url_override__"
+            cloudlibsOsUrlOverride="__cloudlibs_os_url_override__"
 
             if [[ "$cloudlibsUrlOverride" == "None" ]]; then
-              cloudlibsUrl="https://raw.githubusercontent.com/f5Networks/f5-cloud-libs/__cloudlibstag__/dist/f5-cloud-libs.tar.gz"
+              cloudlibsUrl="https://raw.githubusercontent.com/f5Networks/f5-cloud-libs/__cloudlibs_tag__/dist/f5-cloud-libs.tar.gz"
             else
               cloudlibsUrl=${cloudlibsUrlOverride}
             fi
             echo "******Starting Download for f5-cloud-libs from ${cloudlibsUrl} ******"
             curl -o /config/cloud/openstack/f5-cloud-libs.tar.gz ${cloudlibsUrl}
+
+            if [[ "$cloudlibsOsUrlOverride" == "None" ]]; then
+              cloudlibsOsUrl="https://raw.githubusercontent.com/f5Networks/f5-cloud-libs-openstack/__cloudlibs_os_tag__/dist/f5-cloud-libs-openstack.tar.gz"
+            else
+              cloudlibsOsUrl=${cloudlibsOsUrlOverride}
+            fi
+            echo "******Starting Download for f5-cloud-libs-openstack from ${cloudlibsOsUrl} ******"
+            curl -o /config/cloud/openstack/f5-cloud-libs-openstack.tar.gz ${cloudlibsOsUrl}
 
 outputs:
   OS::stack_id:
