--- a/supported/templates/cluster/2nic/f5_bigip_cluster_2_nic.yaml
+++ b/supported/templates/cluster/2nic/f5_bigip_cluster_2_nic.yaml
@@ -13,7 +13,6 @@ parameters:
     type: string
     label: f5 BIG-IP VE Flavor
     description: Type of instance (flavor) to be used for the VE.
-    default: m1.medium
     constraints:
       - custom_constraint: nova.flavor
   use_config_drive:
@@ -25,7 +24,7 @@ parameters:
     type: string
     label: f5 CloudLibs Tag
     description: Tag that determines version of f5 cloudlibs to use for provisioning. If specified, ensure that hashes are valid by either updating scripts/verifyHash or by providing a f5_cloudlibs_verify_hash_url_override value.
-    default: v3.3.0
+    default: v3.5.0
   f5_cloudlibs_url_override:
     type: string
     label: f5 cloud-libs URL Override
@@ -33,8 +32,18 @@ parameters:
     default: None
   f5_cloudlibs_verify_hash_url_override:
     type: string
-    label: f5 cloud-libs verifyHash URL Override  
+    label: f5 cloud-libs verifyHash URL Override
     description: Alternate URL for verifyHash used to validate f5-cloud-libs package. If not specified, the scripts/verifyHash will be used.
+    default: None
+  f5_cloudlibs_openstack_tag:
+    type: string
+    label: f5-cloud-libs-openstack Tag
+    description: Tag that determines version of f5 cloudlibs-package to use for provisioning. If specified, ensure that hashes are valid by either updating scripts/verifyHash or by providing a f5_cloudlibs_verify_hash_url_override value.
+    default: v1.0.0
+  f5_cloudlibs_openstack_url_override:
+    type: string
+    label: f5-cloud-libs-openstack URL Override
+    description: Alternate URL for f5-cloud-libs-openstack package. If not specified, the default GitHub location for f5-cloud-libs will be used. If version is different from default f5_cloudlibs_tag, ensure that hashes are valid by either updating scripts/verifyHash or by providing a f5_cloudlibs_verify_hash_url_override value.
     default: None
   bigip_servers_ntp:
     type: comma_delimited_list
@@ -49,6 +58,11 @@ parameters:
     description: A list of DNS servers to configure on the BIG-IP.
     default:
       -
+  allow_usage_analytics:
+    type: boolean
+    label: Allow Usage Analytics
+    description: Toggles whether non-identifiable statistical information is sent to F5.
+    default: True
   #bigip credentials
   bigip_os_ssh_key:
     type: string
@@ -74,9 +88,9 @@ parameters:
   bigip_addon_license_keys:
     type: comma_delimited_list
     label: Additional BIG-IP VE License Keys
-    description: f5 BIG-IP List of License Add-On Keys. Each list item consists of add-on keys separated by a semicolon <addonKey1;addonKey2> 
-    default: 
-      - 
+    description: f5 BIG-IP List of License Add-On Keys. Each list item consists of add-on keys separated by a semicolon <addonKey1;addonKey2>
+    default:
+      -
   bigip_modules:
     type: comma_delimited_list
     label: Modules to provision on the BIG-IP.
@@ -160,7 +174,7 @@ parameters:
     label: f5 BIG-IP VE VLAN Allow Services
     description: Optional list of <service:port> lockdown settings for the VLAN. If no value is supplied, default is used.
     default:
-      - 
+      -
   #bigip cluster
   bigip_device_group:
     type: string
@@ -175,7 +189,7 @@ parameters:
   bigip_auto_sync:
     type: boolean
     label: f5 BIG-IP Cluster Auto Sync
-    description: Enable config-sync auto-sync 
+    description: Enable config-sync auto-sync
     default: true
   bigip_save_on_auto_sync:
     type: boolean
@@ -196,8 +210,11 @@ parameter_groups:
   - f5_cloudlibs_tag
   - f5_cloudlibs_url_override
   - f5_cloudlibs_verify_hash_url_override
+  - f5_cloudlibs_openstack_tag
+  - f5_cloudlibs_openstack_url_override
   - bigip_servers_ntp
   - bigip_servers_dns
+  - allow_usage_analytics
 - label: BIG-IP Credentials
   parameters:
   - bigip_os_ssh_key
@@ -259,7 +276,7 @@ resources:
     depends_on: device_mgmt_ports
     properties:
       count: 2
-      resource_def: 
+      resource_def:
         type: F5::BigIP::ClusterInstance2Nic
         properties:
           bigip_instance_num: "%index%"
@@ -268,7 +285,9 @@ resources:
           use_config_drive: { get_param: use_config_drive }
           f5_cloudlibs_tag: { get_param: f5_cloudlibs_tag }
           f5_cloudlibs_url_override: { get_param: f5_cloudlibs_url_override }
-          f5_cloudlibs_verify_hash_url_override: { get_param: f5_cloudlibs_verify_hash_url_override}
+          f5_cloudlibs_verify_hash_url_override: { get_param: f5_cloudlibs_verify_hash_url_override }
+          f5_cloudlibs_openstack_tag: { get_param: f5_cloudlibs_openstack_tag }
+          f5_cloudlibs_openstack_url_override: { get_param: f5_cloudlibs_openstack_url_override }
           bigip_servers_ntp: { get_param: bigip_servers_ntp }
           bigip_servers_dns: { get_param: bigip_servers_dns }
           bigip_os_ssh_key: { get_param: bigip_os_ssh_key }
@@ -297,6 +316,12 @@ resources:
           bigip_cluster_self_ip_addresses: { get_param: bigip_cluster_self_ip_addresses }
           bigip_auto_sync : { get_param: bigip_auto_sync }
           bigip_save_on_auto_sync : { get_param: bigip_save_on_auto_sync }
+          ua_allow: { get_param: allow_usage_analytics }
+          ua_cloudlibs_tag: { get_param: f5_cloudlibs_tag }
+          ua_project_id: { get_param: 'OS::project_id'}
+          ua_stack_id: { get_param: 'OS::stack_id' }
+          ua_template_name: sup-f5_bigip_cluster_2_nic.yaml
+          ua_template_version: 3.0.0
 outputs:
   bigip_active_instance_id:
     value: { get_attr: [device_cluster, resource.0.bigip_instance_id] }
