--- a/supported/templates/cluster/2nic/f5_bigip_cluster_instance_2_nic.yaml
+++ b/supported/templates/cluster/2nic/f5_bigip_cluster_instance_2_nic.yaml
@@ -1,6 +1,6 @@
 heat_template_version: 2016-04-08
 
-description: This template deploys a standard f5 BIG-IP VE - 2NIC ready for clustering. The HA self-ip is configured on the data VLAN. 
+description: This template deploys a standard f5 BIG-IP VE - 2NIC ready for clustering. The HA self-ip is configured on the data VLAN.
 
 parameters:
   bigip_image:
@@ -13,7 +13,6 @@ parameters:
     type: string
     label: f5 BIG-IP VE Flavor
     description: Type of instance (flavor) to be used for the VE.
-    default: m1.medium
     constraints:
       - custom_constraint: nova.flavor
   use_config_drive:
@@ -25,7 +24,7 @@ parameters:
     type: string
     label: f5 CloudLibs Tag
     description: Tag that determines version of f5 cloudlibs to use for provisioning. If specified, ensure that hashes are valid by either updating scripts/verifyHash or by providing a f5_cloudlibs_verify_hash_url_override value.
-    default: v3.3.0
+    default: v3.5.0
   f5_cloudlibs_url_override:
     type: string
     label: f5 cloud-libs URL Override
@@ -35,6 +34,16 @@ parameters:
     type: string
     label: f5 cloud-libs verifyHash URL Override
     description: Alternate URL for verifyHash used to validate f5-cloud-libs package. If not specified, the scripts/verifyHash will be used.
+    default: None
+  f5_cloudlibs_openstack_tag:
+    type: string
+    label: f5-cloud-libs-openstack Tag
+    description: Tag that determines version of f5 cloudlibs-package to use for provisioning. If specified, ensure that hashes are valid by either updating scripts/verifyHash or by providing a f5_cloudlibs_verify_hash_url_override value.
+    default: v1.0.0
+  f5_cloudlibs_openstack_url_override:
+    type: string
+    label: f5-cloud-libs-openstack URL Override
+    description: Alternate URL for f5-cloud-libs-openstack package. If not specified, the default GitHub location for f5-cloud-libs will be used. If version is different from default f5_cloudlibs_tag, ensure that hashes are valid by either updating scripts/verifyHash or by providing a f5_cloudlibs_verify_hash_url_override value.
     default: None
   bigip_servers_ntp:
     type: comma_delimited_list
@@ -180,7 +189,7 @@ parameters:
   bigip_auto_sync:
     type: boolean
     label: f5 BIG-IP Cluster Auto Sync
-    description: Enable config-sync auto-sync 
+    description: Enable config-sync auto-sync
     default: true
   bigip_save_on_auto_sync:
     type: boolean
@@ -195,53 +204,101 @@ parameters:
     type: comma_delimited_list
     label: f5 BIG-IP Host Names
     description: List of host names for the BIG-IPs
+  # Optional Usage Analytics
+  ua_allow:
+    type: boolean
+    label: Allow Usage Analytics
+    description: Toggles whether non-identifiable statistical information is sent to F5.
+    default: True
+  ua_template_name:
+    type: string
+    label: Template Name (Usage Analytics)
+    description: Name of the template used to launch the stack
+    default: None
+  ua_template_version:
+    type: string
+    label: Template Version (Usage Analytics)
+    description: Version of the template used to launch the stack
+    default: None
+  ua_cloudlibs_tag:
+    type: string
+    label: f5-cloud-libs Tag (Usage Analytics)
+    description: Tag that identifies cloudlibs version
+    default: None
+  ua_project_id:
+    type: string
+    label: Project ID (Usage Analytics)
+    description: ID of the template user
+    default: None
+  ua_region:
+    type: string
+    label: Region (Usage Analytics)
+    description: Region where template is launched
+    default: None
+  ua_stack_id:
+    type: string
+    label: Stack Id (Usage Analytics)
+    description: Stack Id or Name
+    default: None
+
 
 parameter_groups:
-- label: BIG-IP General Provisioning
-  parameters:
-  - bigip_image
-  - bigip_flavor
-  - use_config_drive
-  - f5_cloudlibs_tag
-  - f5_cloudlibs_url_override
-  - f5_cloudlibs_verify_hash_url_override
-  - bigip_servers_ntp
-  - bigip_servers_dns
-- label: BIG-IP Credentials
-  parameters:
-  - bigip_os_ssh_key
-  - bigip_admin_pwd
-  - bigip_root_pwd
-- label: BIG-IP Licensing and Modules
-  parameters:
-  - bigip_license_keys
-  - bigip_addon_license_keys
-  - bigip_modules
-- label: OS Network
-  parameters:
-  - external_network
-  - mgmt_network
-  - network_vlan_name
-  - network_vlan_subnet
-- label: BIG-IP Network
-  parameters:
-  - bigip_default_gateway
-  - bigip_mgmt_port
-  - bigip_vlan_name
-  - bigip_vlan_mtu
-  - bigip_vlan_tag
-  - bigip_vlan_nic
-  - bigip_self_ip_addresses
-  - bigip_self_cidr_block
-  - bigip_self_port_lockdown
-- label: BIG-IP Cluster
-  parameters:
-  - bigip_instance_num
-  - bigip_device_group
-  - bigip_sync_type
-  - bigip_auto_sync
-  - bigip_save_on_auto_sync
-  - bigip_device_names
+  - label: BIG-IP General Provisioning
+    parameters:
+    - bigip_image
+    - bigip_flavor
+    - use_config_drive
+    - f5_cloudlibs_tag
+    - f5_cloudlibs_url_override
+    - f5_cloudlibs_verify_hash_url_override
+    - f5_cloudlibs_openstack_tag
+    - f5_cloudlibs_openstack_url_override
+    - bigip_servers_ntp
+    - bigip_servers_dns
+  - label: BIG-IP Credentials
+    parameters:
+    - bigip_os_ssh_key
+    - bigip_admin_pwd
+    - bigip_root_pwd
+  - label: BIG-IP Licensing and Modules
+    parameters:
+    - bigip_license_keys
+    - bigip_addon_license_keys
+    - bigip_modules
+  - label: OS Network
+    parameters:
+    - external_network
+    - mgmt_network
+    - network_vlan_name
+    - network_vlan_subnet
+  - label: BIG-IP Network
+    parameters:
+    - bigip_default_gateway
+    - bigip_mgmt_port
+    - bigip_vlan_name
+    - bigip_vlan_mtu
+    - bigip_vlan_tag
+    - bigip_vlan_nic
+    - bigip_self_ip_addresses
+    - bigip_self_cidr_block
+    - bigip_self_port_lockdown
+  - label: BIG-IP Cluster
+    parameters:
+    - bigip_instance_num
+    - bigip_device_group
+    - bigip_sync_type
+    - bigip_auto_sync
+    - bigip_save_on_auto_sync
+    - bigip_device_names
+  - label: Usage Analytics
+    parameters:
+    - ua_allow
+    - ua_cloudlibs_tag
+    - ua_project_id
+    - ua_stack_id
+    - ua_template_name
+    - ua_template_version
+    - ua_region
 
 resources:
   wait_condition_onboard_complete:
@@ -294,6 +351,8 @@ resources:
     properties:
       cloudlibs_tag: { get_param: f5_cloudlibs_tag }
       cloudlibs_url_override: { get_param: f5_cloudlibs_url_override }
+      cloudlibs_os_tag: { get_param: f5_cloudlibs_openstack_tag }
+      cloudlibs_os_url_override: { get_param: f5_cloudlibs_openstack_url_override }
   init_3_onboard_scripts:
     type: F5::BigIP::OnboardingScripts
     properties:
@@ -312,6 +371,13 @@ resources:
       ssh_key_name: { get_param: bigip_os_ssh_key }
       use_config_drive: { get_param: use_config_drive }
       wait_handle_curl: { get_attr: [wait_handle_onboard, curl_cli] }
+      ua_allow: { get_param: ua_allow }
+      ua_template_name: { get_param: ua_template_name }
+      ua_template_version: { get_param: ua_template_version }
+      ua_cloudlibs_tag: { get_param: ua_cloudlibs_tag }
+      ua_project_id: { get_param: ua_project_id }
+      ua_region: { get_param: ua_region }
+      ua_stack_id: { get_param: ua_stack_id }
   init_4_1_onboard_network_config:
     type: F5::BigIP::OnboardNetworkConfig
     properties:
