--- a/supported/templates/standalone/nnic/f5_bigip_standalone_n_nic.yaml
+++ b/supported/templates/standalone/nnic/f5_bigip_standalone_n_nic.yaml
@@ -1,6 +1,19 @@
 heat_template_version: 2016-04-08
 
-description: This template deploys a standard f5 standalone BIG-IP VE - 2NIC.
+# **********************************************************************************************************************
+# TODO: Change how we iterate through ResourceGroup items when moving templates to Ocata version.
+# There is a bug in repeat function that is only fixed in Ocata release. https://bugs.launchpad.net/heat/+bug/1629899
+# So we're not able to use get_attr in the for_each, as shown below:
+  # repeat:
+  #   template:
+  #     port: <%port%>
+  #   for_each:
+  #     <%port%>: { get_attr: [bigip_nnic_handler, port_ids] }
+# We can't use OS::Heat::Value as well, as it is only supported in Newton.
+# As a workaround, we turn the list into a string, then split again, to force repeat function to recognize the list.
+# **********************************************************************************************************************
+
+description: This template deploys a standard f5 standalone BIG-IP VE with dynamic number of NICs.
 
 parameters:
   bigip_image:
@@ -28,7 +41,7 @@ parameters:
   f5_cloudlibs_url_override:
     type: string
     label: f5 cloud-libs URL Override
-    description: Alternate URL for f5-cloud-libs package. If not specified, the default GitHub location for f5-cloud-libs will be used. If version is different from default f5_cloudlibs_tag, ensure that hashes are valid by either updating scripts/verifyHash or by providing a f5_cloudlibs_verify_hash_url_override value.
+    description: Alternate URL for f5-cloud-libs package. If not specified, the default GitHub location for f5-cloud-libs will be used. If version is different from default f5_cloudlibs_tag, ensure that hashes are valid by either updating scripts/verifyHash or by providing a f5_cloudlibs_verify_hash_url_override value. If version is different from default f5_cloudlibs_tag, ensure that hashes are valid by either updating scripts/verifyHash or by providing a f5_cloudlibs_verify_hash_url_override value.
     default: None
   f5_cloudlibs_verify_hash_url_override:
     type: string
@@ -63,6 +76,21 @@ parameters:
     label: Allow Usage Analytics
     description: Toggles whether non-identifiable statistical information is sent to F5.
     default: True
+
+   #bigip nnic provisioning
+  bigip_nic_count:
+    type: number
+    label: f5 BIG-IP NIC count
+    description: Number of additional NICs to attach to the BIG-IP. Note - exclude management nic from count.
+    constraints:
+      - range: { min: 1, max: 10 }
+  bigip_last_nic_index:
+    type: number
+    label: f5 BIG-IP last NIC index (0-based)
+    description: Index of the last NIC setup to wait to finish. This is usually bigip_nic_count minus 1. Since there are no intrinsic math functions currently supported in heat, this parameter is required.
+    constraints:
+      - range: { min: 0, max: 9 }
+
   #bigip credentials
   bigip_os_ssh_key:
     type: string
@@ -80,6 +108,7 @@ parameters:
     label: f5 BIG-IP VE Root User Password
     description: Password for the BIG-IP root user.
     hidden: true
+
   #bigip licensing
   bigip_license_key:
     type: string
@@ -97,6 +126,7 @@ parameters:
     description: A list modules to provision and their level. <module_name:level>
     default:
       - ltm:nominal
+
   #os network
   external_network:
     type: string
@@ -114,22 +144,21 @@ parameters:
     type: string
     label: Management Security Group Name
     description: Name to apply on the security group for the BIG-IP management network.
-  network_vlan_security_group_name:
-    type: string
-    label: Network <No.> Security Group Name
-    description: Name to apply on the security group for BIG-IP VLAN.
-  network_vlan_name:
-    type: string
+  network_vlan_security_group_rules:
+    type: json
+    label: Security Group Rules
+    description: The rules to apply to the security group
+  network_vlan_names:
+    type: comma_delimited_list
     label: OS Neutron Network to map to the BIG-IP VLAN
-    description: The Neutron Network for the corresponding BIG-IP VLAN.
+    description: The Neutron Networks for the corresponding BIG-IP VLANs.
     constraints:
-      - custom_constraint: neutron.network
-  network_vlan_subnet:
-    type: string
+  network_vlan_subnets:
+    type: comma_delimited_list
     label: OS Neutron Subnet to map to the BIG-IP VLAN
-    description: The Neutron Subnet for the corresponding BIG-IP VLAN.
+    description: The Neutron Subnet for the corresponding BIG-IP VLANs.
     constraints:
-      - custom_constraint: neutron.subnet
+
   #bigip network
   bigip_default_gateway:
     type: string
@@ -141,38 +170,33 @@ parameters:
     label: Management port
     description: Port for the BIG-IP Management uri
     default: 443
-  bigip_vlan_name:
-    type: string
-    label: f5 BIG-IP VE VLAN name
-    description: Name of the VLAN to be created on the BIG-IP.
-    default: data
-  bigip_vlan_mtu:
-    type: number
-    label: f5 BIG-IP VE VLAN MTU
+  bigip_vlan_names:
+    type: comma_delimited_list
+    label: f5 BIG-IP VE VLAN names
+    description: Names of the VLAN to be created on the BIG-IP.
+    default:
+     -
+  bigip_vlan_mtus:
+    type: comma_delimited_list
+    label: f5 BIG-IP VE VLAN MTUs
     description: MTU value of the VLAN on the BIG-IP.
-    default: 1400
-  bigip_vlan_tag:
-    type: string
-    label: f5 BIG-IP VE VLAN tag
-    description: Tag to apply on the VLAN on the BIG-IP. Use default value "None" for untagged.
+  bigip_vlan_tags:
+    type: comma_delimited_list
+    label: f5 BIG-IP VE VLAN tags
+    description: Tags to apply on the VLAN on the BIG-IP. Use default value "None" for untagged.
     default: None
-  bigip_vlan_nic:
-    type: string
-    label: f5 BIG-IP VE VLAN NIC
-    description: The NIC associated with the BIG-IP VLAN.
-    default: "1.1"
-  bigip_self_ip_addr:
-    type: string
+  bigip_self_ip_addresses:
+    type: comma_delimited_list
     label: f5 BIG-IP VE VLAN SelfIP Address
-    description: Self-IP address to associate with the BIG-IP VLAN.
-  bigip_self_cidr_block:
-    type: string
+    description: Self-IP addresses to associate with the BIG-IP VLAN.
+  bigip_self_cidr_blocks:
+    type: comma_delimited_list
     label: f5 BIG-IP VE VLAN CIDR Block
     description: CIDR Block for the BIG-IP SelfIP address.
-  bigip_self_port_lockdown:
+  bigip_self_port_lockdowns:
     type: comma_delimited_list
     label: f5 BIG-IP VE VLAN Allow Services
-    description: Optional list of <service:port> lockdown settings for the VLAN. If no value is supplied, default is used.
+    description: Optional list with each item a list of <service:port> lockdown settings for the VLAN. If no value is supplied, default is used. Each list item corresponds to the settings for each NIC at that index.
     default:
       -
 
@@ -190,6 +214,10 @@ parameter_groups:
     - bigip_servers_ntp
     - bigip_servers_dns
     - allow_usage_analytics
+  - label: BIG-IP nNIC Provisioning
+    parameters:
+    - bigip_nic_count
+    - bigip_last_nic_index
   - label: BIG-IP Credentials
     parameters:
     - bigip_os_ssh_key
@@ -205,20 +233,19 @@ parameter_groups:
     - external_network
     - mgmt_network
     - mgmt_security_group_name
-    - network_vlan_security_group_name
-    - network_vlan_name
-    - network_vlan_subnet
+    - network_vlan_security_group_rules
+    - network_vlan_names
+    - network_vlan_subnets
   - label: BIG-IP Network
     parameters:
     - bigip_default_gateway
     - bigip_mgmt_port
-    - bigip_vlan_name
-    - bigip_vlan_mtu
-    - bigip_vlan_tag
-    - bigip_vlan_nic
-    - bigip_self_ip_addr
-    - bigip_self_cidr_block
-    - bigip_self_port_lockdown
+    - bigip_vlan_names
+    - bigip_vlan_mtus
+    - bigip_vlan_tags
+    - bigip_self_ip_addresses
+    - bigip_self_cidr_blocks
+    - bigip_self_port_lockdowns
 
 resources:
   wait_condition_onboard_complete:
@@ -233,7 +260,7 @@ resources:
     type: OS::Heat::WaitCondition
     properties:
       handle: {get_resource: wait_handle_onboard_network}
-      count: 1
+      count: { get_param: bigip_nic_count }
       timeout: 1800
   wait_handle_onboard_network:
     type: OS::Heat::WaitConditionHandle
@@ -252,21 +279,22 @@ resources:
     properties:
       floating_network: { get_param: external_network }
       port_id: { get_resource: mgmt_port }
-  network_vlan_security_group:
-    type: F5::BigIP::DataSecurityGroup
+  bigip_nnic_handler:
+    type: F5::BigIP::NNicHandler
     properties:
-      security_group_name: { get_param: network_vlan_security_group_name }
-  network_vlan_port:
-    type: OS::Neutron::Port
-    properties:
-      network: { get_param: network_vlan_name }
-      security_groups: [{get_attr: [network_vlan_security_group, data_security_group_id]} ]
-      admin_state_up: true
-      fixed_ips:
-        - subnet: { get_param: network_vlan_subnet}
-          ip_address: { get_param: bigip_self_ip_addr }
-      allowed_address_pairs:
-        - ip_address: 0.0.0.0/0
+      bigip_nic_count: {get_param: bigip_nic_count }
+      bigip_last_nic_index: {get_param: bigip_last_nic_index}
+      network_vlan_names: { get_param: network_vlan_names }
+      network_vlan_subnets: { get_param: network_vlan_subnets }
+      network_vlan_security_group_rules: { get_param: network_vlan_security_group_rules }
+      bigip_vlan_names: { get_param: bigip_vlan_names }
+      bigip_self_ip_addresses: { get_param: bigip_self_ip_addresses }
+      bigip_vlan_tags: { get_param: bigip_vlan_tags }
+      bigip_vlan_mtus: { get_param: bigip_vlan_mtus }
+      bigip_self_cidr_blocks:  { get_param: bigip_self_cidr_blocks}
+      bigip_self_port_lockdowns: { get_param: bigip_self_port_lockdowns }
+      bigip_default_gateway: { get_param: bigip_default_gateway }
+      wait_handle_curl: { get_attr: [wait_handle_onboard_network, curl_cli]}
   init_1_override_default_config:
     type: F5::BigIP::OverrideDefaultConfig
     properties:
@@ -298,41 +326,31 @@ resources:
       ua_cloudlibs_tag: { get_param: f5_cloudlibs_tag }
       ua_project_id: { get_param: 'OS::project_id'}
       ua_stack_id: { get_param: 'OS::stack_id' }
-      ua_template_name: sup-f5_bigip_standalone_2_nic.yaml
+      ua_template_name: sup-f5_bigip_standalone_n_nic.yaml
       ua_template_version: 3.0.0
-  init_4_onboard_network_config:
-    type: F5::BigIP::OnboardNetworkConfig
-    properties:
-      vlan_name: { get_param: bigip_vlan_name }
-      vlan_tag: { get_param: bigip_vlan_tag }
-      vlan_mtu: { get_param: bigip_vlan_mtu }
-      vlan_nic: { get_param: bigip_vlan_nic }
-      self_ip_addr: { get_param: bigip_self_ip_addr }
-      self_cidr_block:  { get_param: bigip_self_cidr_block }
-      self_port_lockdown: { get_param: bigip_self_port_lockdown }
-      default_gateway: { get_param: bigip_default_gateway }
-      wait_handle_curl: { get_attr: [wait_handle_onboard_network, curl_cli]}
-  init_5_run_commands:
-    type: OS::Heat::CloudConfig
-    properties:
-      cloud_config:
-        merge_how: dict(recurse_array,no_replace)+list(append)
-        runcmd:
-          - nohup /config/preOnboard.sh &>> /var/log/preOnboard.log < /dev/null &
-          - nohup sh -c '/config/wait_cloudlibs_install.sh; /config/onboard.sh' >> /var/log/onboard.log < /dev/null &
-          - nohup sh -c '/config/wait_cloudlibs_install.sh; f5-rest-node /config/cloud/openstack/node_modules/f5-cloud-libs/scripts/runScript.js --file /config/postOnboard.sh --wait-for ONBOARD_NETWORK_DONE -o /var/log/postOnboard.log' &>> /var/log/runScript.log < /dev/null &
-          - nohup sh -c '/config/wait_cloudlibs_install.sh; f5-rest-node /config/cloud/openstack/node_modules/f5-cloud-libs/scripts/runScript.js --file /config/onboard-network.sh --wait-for ONBOARD_DONE --signal ONBOARD_NETWORK_DONE  -o /var/log/onboard-network.log' &>> /var/log/runScript.log < /dev/null &
   bigip_provision:
     type: OS::Heat::MultipartMime
     properties:
       parts:
-      - config: {get_resource: init_1_override_default_config}
-      - config: {get_resource: init_2_onboard_libs}
-      - config: {get_resource: init_3_onboard_scripts}
-      - config: {get_resource: init_4_onboard_network_config}
-      - config: {get_resource: init_5_run_commands}
+        repeat:
+          template:
+            config: <%config%>
+          for_each:
+            <%config%>:
+              str_split:
+                - ','
+                -
+                  list_join:
+                   - ','
+                   - [{ get_resource: init_1_override_default_config }]
+                   - [{ get_resource: init_2_onboard_libs }]
+                   - [{ get_resource: init_3_onboard_scripts }]
+                   - { get_attr: [ bigip_nnic_handler, init_4_onboard_network_configs ] }
+                   - [{ get_attr: [ bigip_nnic_handler, init_5_run_core_commands ]}]
+                   - [{ get_attr: [ bigip_nnic_handler, init_6_run_network_commands ]}]
   bigip_instance:
     type: OS::Nova::Server
+    depends_on: bigip_nnic_handler
     properties:
       image: { get_param: bigip_image }
       flavor: { get_param: bigip_flavor }
@@ -340,10 +358,21 @@ resources:
       admin_user: root
       config_drive: { get_param: use_config_drive }
       networks:
-        - port: {get_resource: mgmt_port}
-        - port: {get_resource: network_vlan_port}
+        repeat:
+          template:
+            port: <%port%>
+          for_each:
+            <%port%>:
+              str_split:
+               - ','
+               -
+                 list_join:
+                  - ','
+                  - [{ get_resource: mgmt_port }]
+                  - { get_attr: [bigip_nnic_handler, port_ids] }
       user_data_format: RAW
       user_data: {get_resource: bigip_provision}
+
 outputs:
   bigip_instance_id:
     description: ID of the BIG-IP instance
@@ -363,12 +392,6 @@ outputs:
   mgmt_port_id:
     description: The port id of the BIG-IP mgmt interface
     value: { get_resource: mgmt_port }
-  network_self_ip:
-    description: The NonFloating SelfIP address of the BIG-IP 1.1 interface
-    value: { get_attr: [network_vlan_port, fixed_ips, 0, ip_address] }
-  network_vlan_mac:
-    description: The MAC address of the BIG-IP 1.1 interface
-    value: { get_attr: [network_vlan_port, mac_address] }
-  network_vlan_portid:
-    description: The port id the BIG-IP 1.1 interface
-    value: { get_resource: network_vlan_port }
+  network_vlan_port_ids:
+    description: A list containing the port ids for the NICs created on the VLAN
+    value: { get_attr: [bigip_nnic_handler, port_ids] }
